--- a/css/general.css
+++ b/css/general.css
@@ -245,7 +245,7 @@ color: #ECEBEB;
 	height: 100%; /* Full PAge */
 	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 50px;
-	color: #f5f4f4;
+	color: #1a1818;
 	background: url(../img/intro/Z_2.jpg) no-repeat center center;
 	background-size: cover;
 	text-align: center;
